--- a/mens_lax.ipynb
+++ b/mens_lax.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +16,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AnthonyF98/NCAA-Mens-Lax/blob/main/mens_lax.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -352,7 +363,7 @@
           "height": 663
         },
         "id": "QzpSbBaUPeCB",
-        "outputId": "edcaad30-0e0e-4aca-c33b-e1b1b3242517"
+        "outputId": "fb41a760-565e-4e3b-c622-8dae75c047de"
       },
       "execution_count": 2,
       "outputs": [
@@ -364,9 +375,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-4b6b84e4-fdbd-451e-ac08-43bc0908450d\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-657a1162-da08-4711-8311-4b6426d71f0d\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-4b6b84e4-fdbd-451e-ac08-43bc0908450d\">\n",
+              "     <output id=\"result-657a1162-da08-4711-8311-4b6426d71f0d\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -565,7 +576,7 @@
             "Saving ncaa_mens_lacrosse_results_2022.csv to ncaa_mens_lacrosse_results_2022.csv\n",
             "Saving ncaa_mens_lacrosse_results_2023.csv to ncaa_mens_lacrosse_results_2023.csv\n",
             "Saving ncaa_mens_lacrosse_results_2024.csv to ncaa_mens_lacrosse_results_2024.csv\n",
-            "Saving ncaa_mens_lacrosse_results_2025.csv to ncaa_mens_lacrosse_results_2025 (1).csv\n",
+            "Saving ncaa_mens_lacrosse_results_2025.csv to ncaa_mens_lacrosse_results_2025.csv\n",
             "User uploaded file \"ncaa_mens_lacrosse_results_2014.csv\" with length 23256 bytes\n",
             "User uploaded file \"ncaa_mens_lacrosse_results_2015.csv\" with length 26415 bytes\n",
             "User uploaded file \"ncaa_mens_lacrosse_results_2016.csv\" with length 24444 bytes\n",
@@ -577,7 +588,7 @@
             "User uploaded file \"ncaa_mens_lacrosse_results_2022.csv\" with length 36888 bytes\n",
             "User uploaded file \"ncaa_mens_lacrosse_results_2023.csv\" with length 38440 bytes\n",
             "User uploaded file \"ncaa_mens_lacrosse_results_2024.csv\" with length 38619 bytes\n",
-            "User uploaded file \"ncaa_mens_lacrosse_results_2025 (1).csv\" with length 32104 bytes\n"
+            "User uploaded file \"ncaa_mens_lacrosse_results_2025.csv\" with length 32104 bytes\n"
           ]
         }
       ]
@@ -606,7 +617,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kJW680WJSG7x",
-        "outputId": "54fbcd68-9268-4fed-f775-ec69f43c2608"
+        "outputId": "bd75c3b2-0dcc-4552-e531-569400ec57f7"
       },
       "execution_count": 3,
       "outputs": [
@@ -786,7 +797,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ciRXxKFJkwAy",
-        "outputId": "6ac5118f-4987-46ac-fe77-0eadafd7d16c"
+        "outputId": "60396921-8591-40b6-eadf-13b0e7d27bc2"
       },
       "execution_count": 5,
       "outputs": [
@@ -858,7 +869,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YCFJ_TldXbdF",
-        "outputId": "7786f725-9409-4459-b0b7-cc9bb4ee41d6"
+        "outputId": "5e962f22-19a7-41e8-a701-e29ff4b0c68e"
       },
       "execution_count": 6,
       "outputs": [
@@ -895,7 +906,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vlZZ9GvJkU5r",
-        "outputId": "840ea276-1ed5-404e-c76d-cec88af7282a"
+        "outputId": "88bbee2e-ed5f-44b6-ffb4-e86a815959fa"
       },
       "execution_count": 7,
       "outputs": [
@@ -940,7 +951,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WDiAMtSQeeCw",
-        "outputId": "6180d1c3-2475-4880-e429-a11ad4b7be61"
+        "outputId": "4939408a-cc78-4ef0-fc67-6449209e1562"
       },
       "execution_count": 8,
       "outputs": [
@@ -1067,9 +1078,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q0Rbkgw2cSNi",
-        "outputId": "42858fca-d3e3-4670-d7e2-4c90c0b44184"
+        "outputId": "22746172-c30d-4df0-d4d6-3a647d414b9c"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
