--- a/mens_lax.ipynb
+++ b/mens_lax.ipynb
@@ -363,9 +363,9 @@
           "height": 663
         },
         "id": "QzpSbBaUPeCB",
-        "outputId": "fb41a760-565e-4e3b-c622-8dae75c047de"
+        "outputId": "e53508c7-1e62-4908-c449-205144bf6125"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -375,9 +375,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-657a1162-da08-4711-8311-4b6426d71f0d\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-dc10b524-a2b8-47ff-84f0-579f72386973\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-657a1162-da08-4711-8311-4b6426d71f0d\">\n",
+              "     <output id=\"result-dc10b524-a2b8-47ff-84f0-579f72386973\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -617,9 +617,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kJW680WJSG7x",
-        "outputId": "bd75c3b2-0dcc-4552-e531-569400ec57f7"
+        "outputId": "1418776b-58f4-4b05-d2c6-115f08b39ce6"
       },
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,6 +771,8 @@
         "        \"\"\"Returns Elo ratings, including only Division I teams.\"\"\"\n",
         "        return {team: rating for team, rating in self.ratings.items() if team in self.d1_teams}\n",
         "\n",
+        "\n",
+        "\n",
         "# Instantiate the EloRatingSystem with the list of Division I teams\n",
         "elo_system = EloRatingSystem(d1_teams=d1_teams)\n",
         "\n",
@@ -780,7 +782,7 @@
       "metadata": {
         "id": "WT-8hu5AGBiU"
       },
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -797,9 +799,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ciRXxKFJkwAy",
-        "outputId": "60396921-8591-40b6-eadf-13b0e7d27bc2"
+        "outputId": "f08e2485-51e7-4ab1-d207-1fbab106278a"
       },
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,9 +871,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YCFJ_TldXbdF",
-        "outputId": "5e962f22-19a7-41e8-a701-e29ff4b0c68e"
+        "outputId": "458b4bcd-555d-491e-eb8f-c9026d4af983"
       },
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,9 +908,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vlZZ9GvJkU5r",
-        "outputId": "88bbee2e-ed5f-44b6-ffb4-e86a815959fa"
+        "outputId": "f76fdf17-721f-4d70-c6a0-510dcf4701fe"
       },
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,9 +953,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WDiAMtSQeeCw",
-        "outputId": "4939408a-cc78-4ef0-fc67-6449209e1562"
+        "outputId": "90a690bd-9960-4d8b-cb3d-a39563242e37"
       },
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1042,22 +1044,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# Define function to calculate win probabilities and spread\n",
         "def calculate_win_probability(elo_system, team1, team2):\n",
         "    if team1 in elo_system.ratings and team2 in elo_system.ratings:\n",
         "        rating1 = elo_system.ratings[team1]\n",
         "        rating2 = elo_system.ratings[team2]\n",
-        "        expected_score_team1 = 1 / (1 + 10 ** ((rating2 - rating1) / 400))\n",
+        "        score_diff = (rating2 - rating1) / 200 * 1  # Assuming each 200 points difference means 1 goal\n",
+        "        expected_score_team1 = 1 / (1 + 10 ** ((rating2 - rating1) / 200))\n",
         "        expected_score_team2 = 1 - expected_score_team1\n",
-        "        return expected_score_team1, expected_score_team2\n",
+        "        return expected_score_team1, expected_score_team2, score_diff\n",
         "    else:\n",
-        "        return None  # Handle case where one or both teams are not in the ratings\n",
-        "\n",
+        "        return None  # If one or both teams not in ratings\n",
         "\n"
       ],
       "metadata": {
         "id": "sops_I7QZ5LM"
       },
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1065,11 +1068,11 @@
       "source": [
         "team1 = input(\"Enter the name of Team 1: \")\n",
         "team2 = input(\"Enter the name of Team 2: \")\n",
-        "\n",
         "probabilities = calculate_win_probability(elo_system, team1, team2)\n",
         "if probabilities:\n",
         "    print(f\"Probability of {team1} winning: {probabilities[0] * 100:.2f}%\")\n",
         "    print(f\"Probability of {team2} winning: {probabilities[1] * 100:.2f}%\")\n",
+        "    print(f\"Point spread (in goals favoring {team2}): {probabilities[2]:.2f}\")\n",
         "else:\n",
         "    print(\"One or both of the teams are not found in the current Elo ratings.\")\n"
       ],
@@ -1078,18 +1081,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q0Rbkgw2cSNi",
-        "outputId": "22746172-c30d-4df0-d4d6-3a647d414b9c"
+        "outputId": "a6e10328-1344-43ff-bf6e-fa2013f90e7e"
       },
-      "execution_count": 11,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the name of Team 1: Notre Dame\n",
-            "Enter the name of Team 2: Maryland\n",
-            "Probability of Notre Dame winning: 67.51%\n",
-            "Probability of Maryland winning: 32.49%\n"
+            "Enter the name of Team 1: Dartmouth\n",
+            "Enter the name of Team 2: Yale\n",
+            "Probability of Dartmouth winning: 6.85%\n",
+            "Probability of Yale winning: 93.15%\n",
+            "Point spread (in goals favoring Yale): 1.13\n"
           ]
         }
       ]
