--- a/mens_lax.ipynb
+++ b/mens_lax.ipynb
@@ -1049,8 +1049,8 @@
         "    if team1 in elo_system.ratings and team2 in elo_system.ratings:\n",
         "        rating1 = elo_system.ratings[team1]\n",
         "        rating2 = elo_system.ratings[team2]\n",
-        "        score_diff = (rating2 - rating1) / 200 * 1  # Assuming each 200 points difference means 1 goal\n",
-        "        expected_score_team1 = 1 / (1 + 10 ** ((rating2 - rating1) / 200))\n",
+        "        score_diff = (rating2 - rating1) / 250 * 1  # Assuming each 250 points difference means 1 goal\n",
+        "        expected_score_team1 = 1 / (1 + 10 ** ((rating2 - rating1) / 400))\n",
         "        expected_score_team2 = 1 - expected_score_team1\n",
         "        return expected_score_team1, expected_score_team2, score_diff\n",
         "    else:\n",
@@ -1060,7 +1060,7 @@
       "metadata": {
         "id": "sops_I7QZ5LM"
       },
-      "execution_count": 24,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1081,19 +1081,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q0Rbkgw2cSNi",
-        "outputId": "a6e10328-1344-43ff-bf6e-fa2013f90e7e"
+        "outputId": "3adbb16a-33f3-477f-dd0a-104c9b7264f8"
       },
-      "execution_count": 28,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the name of Team 1: Dartmouth\n",
-            "Enter the name of Team 2: Yale\n",
-            "Probability of Dartmouth winning: 6.85%\n",
-            "Probability of Yale winning: 93.15%\n",
-            "Point spread (in goals favoring Yale): 1.13\n"
+            "Enter the name of Team 1: Hampton\n",
+            "Enter the name of Team 2: Notre Dame\n",
+            "Probability of Hampton winning: 0.00%\n",
+            "Probability of Notre Dame winning: 100.00%\n",
+            "Point spread (in goals favoring Notre Dame): 7.95\n"
           ]
         }
       ]
