--- a/mens_lax.ipynb
+++ b/mens_lax.ipynb
@@ -365,7 +365,7 @@
         "id": "QzpSbBaUPeCB",
         "outputId": "e53508c7-1e62-4908-c449-205144bf6125"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -619,7 +619,7 @@
         "id": "kJW680WJSG7x",
         "outputId": "1418776b-58f4-4b05-d2c6-115f08b39ce6"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,7 +782,7 @@
       "metadata": {
         "id": "WT-8hu5AGBiU"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -801,7 +801,7 @@
         "id": "ciRXxKFJkwAy",
         "outputId": "f08e2485-51e7-4ab1-d207-1fbab106278a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +873,7 @@
         "id": "YCFJ_TldXbdF",
         "outputId": "458b4bcd-555d-491e-eb8f-c9026d4af983"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -910,7 +910,7 @@
         "id": "vlZZ9GvJkU5r",
         "outputId": "f76fdf17-721f-4d70-c6a0-510dcf4701fe"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -955,7 +955,7 @@
         "id": "WDiAMtSQeeCw",
         "outputId": "90a690bd-9960-4d8b-cb3d-a39563242e37"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1049,7 @@
         "    if team1 in elo_system.ratings and team2 in elo_system.ratings:\n",
         "        rating1 = elo_system.ratings[team1]\n",
         "        rating2 = elo_system.ratings[team2]\n",
-        "        score_diff = (rating2 - rating1) / 250 * 1  # Assuming each 250 points difference means 1 goal\n",
+        "        score_diff = (rating2 - rating1) / 250 * 1  #adjust 250 ELO diff accordingly\n",
         "        expected_score_team1 = 1 / (1 + 10 ** ((rating2 - rating1) / 400))\n",
         "        expected_score_team2 = 1 - expected_score_team1\n",
         "        return expected_score_team1, expected_score_team2, score_diff\n",
@@ -1060,7 +1060,7 @@
       "metadata": {
         "id": "sops_I7QZ5LM"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,19 +1081,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q0Rbkgw2cSNi",
-        "outputId": "3adbb16a-33f3-477f-dd0a-104c9b7264f8"
+        "outputId": "ab99c20d-b8c4-4032-d198-8274cba0bcb5"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the name of Team 1: Hampton\n",
-            "Enter the name of Team 2: Notre Dame\n",
-            "Probability of Hampton winning: 0.00%\n",
-            "Probability of Notre Dame winning: 100.00%\n",
-            "Point spread (in goals favoring Notre Dame): 7.95\n"
+            "Enter the name of Team 1: Dartmouth\n",
+            "Enter the name of Team 2: Penn\n",
+            "Probability of Dartmouth winning: 16.13%\n",
+            "Probability of Penn winning: 83.87%\n",
+            "Point spread (in goals favoring Penn): 1.15\n"
           ]
         }
       ]
