--- a/mens_lax.ipynb
+++ b/mens_lax.ipynb
@@ -1049,7 +1049,7 @@
         "    if team1 in elo_system.ratings and team2 in elo_system.ratings:\n",
         "        rating1 = elo_system.ratings[team1]\n",
         "        rating2 = elo_system.ratings[team2]\n",
-        "        score_diff = (rating2 - rating1) / 175 * 1  # Assuming each 175 points difference means 1 goal\n",
+        "        score_diff = (rating2 - rating1) / 175 * 1  # Assuming each 175 elo difference means 1 goal\n",
         "        expected_score_team1 = 1 / (1 + 10 ** ((rating2 - rating1) / 400))\n",
         "        expected_score_team2 = 1 - expected_score_team1\n",
         "        return expected_score_team1, expected_score_team2, score_diff\n",
